# whatsapp-image-bot

./: .dockerignore  .env.example  .pre-commit-config.yaml  BUSINESS_DEVELOPMENT_GUIDE.md  CLAUDE.md  DEVELOPMENT_GUIDE.md  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: deploy.sh  setup.py
src/whatsapp_image_bot/: __init__.py  app.py  config.py
src/whatsapp_image_bot/api/: __init__.py  routes.py  webhooks.py
src/whatsapp_image_bot/clients/: __init__.py  base.py  fal_client.py  replicate_client.py
src/whatsapp_image_bot/services/: __init__.py  cloud_storage.py  image_processor.py  whatsapp_client.py
src/whatsapp_image_bot/utils/: __init__.py  helpers.py  logger.py  validators.py
tests/: __init__.py  test_api_clients.py  test_cloud_storage.py  test_docker_container.py  test_image_processor.py  test_routes.py
