[project]
name = "whatsapp-image-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Juan Pineros", email = "juancarlos@sketchpro.ai" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
whatsapp-image-bot = "whatsapp_image_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
